# Parallel-Minimax-Mancala

./: MancalaSolver.eventlog  MancalaSolver.hi  MancalaSolver.hs  ParaMancala.hi  ParaMancala.hs  ParaMancala1.hs  ParaMancala2  ParaMancala3.hi  ParaMancala3.hs  ParaMancala4.hs  Parallel-Minimax-Mancala.cabal  README.md  stack.yaml  test.sh
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.2/: Parallel-Minimax-Mancala-0.1.0.0-inplace.conf  package.cache
dist-newstyle/tmp/environment.-16192/: .ghc.environment.x86_64-mingw32-9.8.2
src/: Display.hs  GameLogic.hs  GameState.hs  Main.hs  MiniMax.hs  Run.hs
test/: DisplayTest.hs  GameLogicTest.hs  GameStateTest.hs  Main.hs  MainTest.hs  MiniMaxTest.hs  QuickTest.hs  RunTest.hs
